* Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.1
- Expanded simp/rsyslog dependendency range to < 9.0.0.

* Fri Dec 18 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.2.1
- Removed EL6 support

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.2.0-0
- Add EL8 support
- Updated README.md
- Added REFERENCE.md
- Made use of rsync optional (enabled by default for backwards compatibility)
- Add support for passing in a full dhcpd.conf entry
- Ensure that the SELinux user and type are set for the configuration files
- Switch to using iptables::listen::udp for firewalld compatibility
- Add acceptance test

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 6.2.0-0
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.1-0
- Use simplib::passgen() in lieu of passgen(), a deprecated simplib
  Puppet 3 function.
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Mon Oct 15 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.0-0
- Added $dhcp::dhcpd::package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`
- Remove support for Puppet less than 4.10.4
- Add Puppet Strings documentation
- Update badges and contribution guide URL in README.md

* Mon Mar 19 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.0-0
- Added support for OEL and Puppet 5

* Wed Apr 19 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.1-0
- Updated logrotate to use new lastaction API
- Confine puppet version in metadata.json

* Mon Jan 23 2017 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Calls to rsyslog::rule no longer contain logic
- Rsync source updated to new location

* Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 6.0.0-0
- Updated global catalysts
- Strong typed

* Thu Dec 01 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.0.0-0