@@ -1,17 +1,16 @@
 ---
 fixtures:
   repositories:
-    iptables: https://github.com/simp/pupmod-simp-iptables
-    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld
-    logrotate: https://github.com/simp/pupmod-simp-logrotate
-    rsync: https://github.com/simp/pupmod-simp-rsync
-    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
-    selinux_core:
-      repo: https://github.com/simp/pupmod-puppetlabs-selinux_core.git
-      puppet_version: ">= 6.0.0"
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld
-    stdlib: https://github.com/simp/puppetlabs-stdlib
-    systemd: https://github.com/simp/puppet-systemd
+    augeas_core: https://github.com/simp/pupmod-puppetlabs-augeas_core.git
+    iptables: https://github.com/simp/pupmod-simp-iptables.git
+    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld.git
+    logrotate: https://github.com/simp/pupmod-simp-logrotate.git
+    rsync: https://github.com/simp/pupmod-simp-rsync.git
+    rsyslog: https://github.com/simp/pupmod-simp-rsyslog.git
+    selinux_core: https://github.com/simp/pupmod-puppetlabs-selinux_core.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
+    systemd: https://github.com/simp/puppet-systemd.git
   symlinks:
     dhcp: "#{source_dir}"
