@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 6.3.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed Feb 03 2021 Liz Nemsick <lnemsick.simp@gmail.com> - 6.2.1
 - Expanded simp/rsyslog dependendency range to < 9.0.0.
 
